--- a/template/templates/portfolio-template-01/assets/css/styles.css
+++ b/template/templates/portfolio-template-01/assets/css/styles.css
@@ -1,5 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 5px;
+    padding-bottom: 70px;
+    background-color: darkgoldenrod !important;;
 }
 
 h1,
