--- a/template/templates/portfolio-template-01/index.html
+++ b/template/templates/portfolio-template-01/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Jane Doe | Portfolio</title>
+    <title>Sarah Divakarla| Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
